--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="popup.js" defer></script>
 </head>
 <body>
-	<button id='button1'>Stop</button>
+	<button id='toggler'>Stop</button>
+	<button id='downloadAll'>Download All</button>
 </body>
 </html>
